# Mini-Haskell

./: .gitignore  .travis.yml  README.md  project.cabal
project/: .gitignore  BEFORE.md  INSTRUCTIONS.md  ProjectHints.md  README.md  grading.txt
project/src/: Ast.hs  Check.hs  EnvUnsafeLog.hs  Eval.hs  Exec.hs  HelpShow.hs  Parser.hs  ParserMonad.hs
project/src/HTMLDocumentation/: Ast.html  Check.html  EnvUnsafeLog.html  Eval.html  Exec.html  HelpShow.html  Parser.html  ParserMonad.html  doc-index-43.html  doc-index-60.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-I.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index.html  index.html
project/src/hints/: GeneratorExample.hs  GeneratorExampleWithHelper.hs  LangMonad.hs  showPrettyHints.hs
project/tests/: CheckTest.hs  EvalTest.hs  ExecTest.hs  Main.hs  ParserTest.hs  milestone2_eval.txt  milestone2_parser.txt
