name:                 project
version:              0.1.0.0
synopsis:
homepage:
author:               Mark
maintainer:           lemay@bu.edu
category:
build-type:           Simple
cabal-version:        >=1.10


library
  exposed-modules:    Exec, Eval, Check, Parser, ParserMonad, Ast, EnvUnsafeLog, HelpShow
  ghc-options:        -fwarn-incomplete-patterns -fwarn-incomplete-uni-patterns
  build-depends:      containers, base >= 4.7 && < 5
  hs-source-dirs:     project/src
  default-language:   Haskell2010

test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
-- TODO: detailed-1.0 is preferred
  hs-source-dirs:
    project/tests
  main-is: Main.hs
  other-modules: CheckTest, EvalTest, ParserTest, ExecTest
  build-depends:
      containers, base >= 4.7 && < 5
    , tasty >= 0.11.1, tasty-hunit, tasty-quickcheck
    , project
